--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zone de Jeu</title>
+    <link rel="stylesheet" href="./styles/style_tp4.css">
 </head>
 
 <body>
@@ -12,8 +13,8 @@
         <div>
             <h1 id="haut">Bienvenue sur Zone de Jeu, votre nouvelle plateforme de référence pour tous vos besoins en jeux vidéo !
             </h1>
-            <img src="images/boutique.png" alt="boutique" width="30px" height="30px">
-            <a href="jeux.html">La boutique</a>
+            <img class="align-inline" src="images/boutique.png" alt="boutique" width="30px" height="30px">
+            <a id="boutique" class="align-inline" href="jeux.html">La boutique</a>
             <br>
             <br>
             <img src="images/logo.webp" alt="Zone de Jeu" width="450" height="450" title="logo">
