--- a/jeux.html
+++ b/jeux.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux</title>
+    <link rel="stylesheet" href="./styles/style_tp4.css">
 </head>
 
 <body>
@@ -66,7 +67,7 @@
                 </tr>
                 <tr>
                     <td><img src="images/Eternal_Quest.webp" width="200" height="300"></td>
-                    <td><img src="images/Sunny's_Island.webp" width="200" height="300"></td>
+                    <td><img src="images/Sunnys_Island.webp" width="200" height="300"></td>
                     <td><img src="images/Urban_Brawl.webp" width="200" height="300"></td>
 
                 </tr>
