Finalisation du tp

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <div>
             <h1 id="haut">Bienvenue sur Zone de Jeu, votre nouvelle plateforme de référence pour tous vos besoins en jeux vidéo !
             </h1>
-            <img class="align-inline" src="images/boutique.png" alt="boutique" width="30px" height="30px">
-            <a id="boutique" class="align-inline" href="jeux.html">La boutique</a>
+            <div class="parent">
+                <img class="inline" src="images/boutique.png" alt="boutique" width="30px" height="30px">
+                <a id="boutique" href="jeux.html">La boutique</a>
+            </div>
             <br>
             <br>
             <img src="images/logo.webp" alt="Zone de Jeu" width="450" height="450" title="logo">
             <hr>
         </div>
         <div>
-            <h2>Présentation de la plateforme</h2>
+            <h2 class="h2-override">Présentation de la plateforme</h2>
             <p>Zone de Jeu est une plateforme innovante dédiée aux passionnés de jeux vidéo, offrant un accès facile et
                 rapide à une large bibliothèque de jeux pour tous les goûts.<br> Que vous soyez amateur de jeux
                 d'action, de
@@ -29,43 +31,43 @@
                 intuitive et une sélection de titres variés pour satisfaire toutes vos envies de gaming. <br></p>
         </div>
         <div>
-            <h2>Caractéristiques principales</h2>
-            <ul>
-                <li>
+            <h2 class="h2-override">Caractéristiques principales</h2>
+            <ul id="cp-list">
+                <li class="cp-list-elements">
                     <strong>Catalogue diversifié</strong> : Explorez une vaste collection de jeux, des classiques
                     incontournables aux nouveautés les plus attendues.
                 </li>
-                <li>
+                <li class="cp-list-elements">
                     <strong>Téléchargement instantané</strong> : Accédez à vos jeux préférés en quelques clics grâce à
                     notre système de téléchargement rapide et sécurisé.
                 </li>
-                <li>
+                <li class="cp-list-elements">
                     <strong>Communauté dynamique</strong> : Rejoignez une communauté de joueurs passionnés, échangez des
                     astuces, des avis, et partagez vos expériences de jeu.
                 </li>
-                <li>
+                <li class="cp-list-elements">
                     <strong>Offres exclusives</strong> : Profitez de promotions régulières et d'offres spéciales
                     réservées aux abonné(e)s de Zone de Jeu.
                 </li>
             </ul>
         </div>
         <div>
-            <h2>Conditions générales d'utilisation</h2>
-            <ol>
+            <h2 class="h2-override">Conditions générales d'utilisation</h2>
+            <ol id="link-list">
                 <li>
-                    <a href="contenu/CGU.html#acceptation">CGU : Acceptation des Conditions</a>
+                    <a class="link-list-elements" href="contenu/CGU.html#acceptation">CGU : Acceptation des Conditions</a>
                 </li>
                 <li>
-                    <a href="contenu/CGU.html#contenu">CGU : Utilisation du Contenu</a>
+                    <a class="link-list-elements" href="contenu/CGU.html#contenu">CGU : Utilisation du Contenu</a>
                 </li>
                 <li>
-                    <a href="contenu/CGU.html#responsabilite">CGU : Responsabilité de l'Utilisateur</a>
+                    <a class="link-list-elements" href="contenu/CGU.html#responsabilite">CGU : Responsabilité de l'Utilisateur</a>
                 </li>
                 <li>
-                    <a href="contenu/CGU.html#protection">CGU : Protection des Données Personnelles</a>
+                    <a class="link-list-elements" href="contenu/CGU.html#protection">CGU : Protection des Données Personnelles</a>
                 </li>
                 <li>
-                    <a href="contenu/CGU.html#modification">CGU : Modification des Conditions</a>
+                    <a class="link-list-elements" href="contenu/CGU.html#modification">CGU : Modification des Conditions</a>
                 </li>
             </ol>
         </div>
