--- a/jeux.html
+++ b/jeux.html
@@ -28,7 +28,7 @@
                     <th>Shadow of the Nexus</th>
                     <th>Mystic Horizons</th>
                     <th>Iron Blade</th>
-                    <th rowspan="3"><em>Uniquement cette semaine</em></th>
+                    <th rowspan="3" class="colonne"><em>Uniquement cette semaine</em></th>
                 </tr>
                 <tr>
                     <td><img src="images/shadow_nexus.webp" width="200" height="300"></td>
@@ -44,7 +44,7 @@
                     <th>Victory Zone</th>
                     <th>Last Survivor - <em>passe de combat</em></th>
                     <th>Skybound Adventure</th>
-                    <th rowspan="3"><em>En promo</em></th>
+                    <th rowspan="3" class="colonne"><em>En promo</em></th>
                 </tr>
                 <tr>
                     <td><img src="images/victory_zone.webp" width="200" height="300"></td>
@@ -63,7 +63,7 @@
                     <th>Eternal Quest</th>
                     <th>Sunny's Island</th>
                     <th>Urban Brawl</th>
-                    <th rowspan="3"><em>Rétro</em></th>
+                    <th rowspan="3" class="colonne"><em>Rétro</em></th>
                 </tr>
                 <tr>
                     <td><img src="images/Eternal_Quest.webp" width="200" height="300"></td>
